logs/django-data-mirror.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_data_mirror'...
Listing './lib/python3.5/site-packages/django_data_mirror/management'...
Listing './lib/python3.5/site-packages/django_data_mirror/management/commands'...
Compiling './lib/python3.5/site-packages/django_data_mirror/management/commands/data_mirror_analyze.py'...
***   File "./lib/python3.5/site-packages/django_data_mirror/management/commands/data_mirror_analyze.py", line 24
    print cls
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_data_mirror/management/commands/data_mirror_refresh.py'...
***   File "./lib/python3.5/site-packages/django_data_mirror/management/commands/data_mirror_refresh.py", line 52
    print 'Processing %s (%i of %i)' % (control.slug, i, total)
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_data_mirror/migrations'...
Compiling './lib/python3.5/site-packages/django_data_mirror/models.py'...
***   File "./lib/python3.5/site-packages/django_data_mirror/models.py", line 70
    raise NotImplementedError, self.types
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_data_mirror-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
